added stuff while on github

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <title> My html repo </title>
-<link rel = "styleheet" href="styles.css" medis="screen"/>
+<link rel = "styleheet" href="styles.css" media="screen"/>
 </head>
 <body>
 <h2> My first page </h2>
 <p> I am trying to add some stuff in here </p>
 <p> I am trying to add some stuff in here </p>
+
+
+<p> adding while i was on github</p>
 </body>
 </html>
