--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <h2> My first page </h2>
 <p> I am trying to add some stuff in here </p>
 <p> I am trying to add some stuff in here </p>
+
+
+<p> I am trying to add some stuff in here </p><p> I am trying to add some stuff in here </p>
 </body>
 </html>
